--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,12 +14,16 @@
  *= require_self
  */
 
+ * {
+  box-sizing: border-box;
+}
+
 .main {
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-width: 700px;
   min-height: 100vh;
+  min-width: 700px;
 }
 
 footer {
