--- a/app/assets/stylesheets/shared/footer_1.css
+++ b/app/assets/stylesheets/shared/footer_1.css
@@ -10,3 +10,13 @@
   font-size: 13px;
   font-weight: bold;
 }
+
+@media (max-width: 500px) {
+  .footer-1 {
+    height:25px;
+  }
+
+  .copyright-1 {
+    font-size: 10px;
+  }
+}
