--- a/app/assets/stylesheets/shared/footer_2.css
+++ b/app/assets/stylesheets/shared/footer_2.css
@@ -11,3 +11,13 @@
   font-size: 13px;
   font-weight: bold;
 }
+
+@media (max-width: 500px) {
+  .footer-2 {
+    height:25px;
+  }
+
+  .copyright-2 {
+    font-size: 10px;
+  }
+}
