--- a/app/assets/stylesheets/words/index.css
+++ b/app/assets/stylesheets/words/index.css
@@ -90,13 +90,33 @@
     font-size: 10px;
   }
 
+  .info-title {
+    font-size: 20px;
+    font-style: italic;
+  }
+
   .info-contents {
     width: 80%;
+    font-size: 11px;
+    line-height: 20px;
     margin-bottom: 30px; 
   }
 
   .member-buttons {
     margin-top: 40px;
+  }
+
+  .register-link-button {
+    width:  150px;
+    font-size: 12px;
+    padding: 4px;
+  }
+
+  .login-link-button {
+    width:  100px;
+    font-size: 12px;
+    padding: 4px;
+    margin: 20px auto 0;
   }
 }
 
