--- a/app/assets/stylesheets/words/show.css
+++ b/app/assets/stylesheets/words/show.css
@@ -1,7 +1,7 @@
 .word-info {
   width: 70%;
-  /* min-width: 700px; */
   margin: 50px auto 100px;
+
 }
 
 /* word heading */
@@ -86,25 +86,92 @@ img.info-img-content {
 }
 
 .info-details-box {
+  min-height: 200px;
   border: 2px solid black;
   border-radius: 5px;
   vertical-align: text-top;
-  padding: 0 10px;
+  padding: 10px;
   font-size: 15px;
 }
 
 /* responsive */
-@media (max-width: 1000px) {
+/* @media (max-width: 1000px) {
   .info-header, .info-upper, .info-lower {
     width:85%;
-    margin: 50px auto 0;
   }
-}
+} */
 
-@media (max-width: 500px)
- {.word-info {
+@media (max-width: 500px) {
+  .word-info {
+   width: 85%;
+   margin-top: 30px;
  }
   .info-basic-box {
     width: 100%;
+  }
+
+  .info-header-text {
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  img.edit-button {
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+  }
+
+  .info-edit-button img.star-button {
+    width: 20px;
+    height: 20px;
+  }
+
+  .info-upper {
+    margin-top: 30px;
+  }
+  
+  .info-basic-table {
+    width: 100%;
+    height: 150px;
+  }
+  
+  .info-table-left {
+    width: 30%;
+    font-size: 12px;
+  }
+  
+  .info-table-right {
+    width: 70%;
+    font-size: 12px;
+  }
+
+  .info-table-details {
+    font-size: 12px;
+    font-weight: bold;
+  }
+
+  .info-lower {
+    margin-top: 20px;
+  }
+  
+  .info-details-box {
+    min-height: 100px;
+    border: 2px solid black;
+    border-radius: 5px;
+    vertical-align: text-top;
+    padding: 5px;
+    font-size: 10px;
+  }
+
+  .info-img-box {
+    width: 100%;
+  }
+  
+  img.info-img-content {
+    width: 100%;
+    height: 200px;
+    border-radius: 5px;
+    object-fit: contain;
+ 
   }
 }
