--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     <div class="my-words-header">
       My Posts
     </div>
-    <div class="sort-form">
+    <div class="sort-form-wrap">
       <%= form_with(url: user_path(current_user.id), local: true, method: :get, class:"sort-form") do |form| %>
         <label class="sort-filtering"><%= form.select :sort_method, options_for_select([["Newest to Oldest", "sort_created_desc"], ["Oldest to Newest", "sort_created_asc"], ["あ to ん", "kana_asc"], ["ん to あ", "kana_desc"]], params[:sort_method]), class:"sort-select" %></label>
         <%= image_submit_tag("sort_button.png", class:"sort-button") %>
