--- a/app/assets/stylesheets/words/index.css
+++ b/app/assets/stylesheets/words/index.css
@@ -176,19 +176,25 @@
   border-radius: 5px;
 }
 
+.spotlight-link {
+  color: black;
+  text-decoration: none;
+}
+
 .spotlight-piece {
   height: 100%;
-  background-color:rgb(235, 231, 231);
+  background-color:rgb(243, 239, 239);
 }
 
 .spotlight-image img {
   height: 300px;
   width: 100%;
+  object-fit: contain;
 }
 
 .spotlight-table {
+  height: 120px;
   font-weight: bold;
-  line-height: 30px;
   width: 100%;
 }
 
@@ -204,6 +210,10 @@
   text-align: right;
   padding-right: 10px;
   margin-top: 10px;
+}
+
+.swiper-pagination-spotlight {
+  text-align: center;
 }
 
 @media (max-width: 500px) {
