--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -11,7 +11,7 @@
         <%= render partial: 'favorites/favorite' , locals: { word: @word }%>
         <% if @word.user_id == current_user.id %>
           <div><%= link_to image_tag('edit_button.png', class:"edit-button"), edit_word_path(@word.id) %></div>
-          <div><%= link_to image_tag('delete_button.png', class:"edit-button"), @delete_path, method: :delete, data: {confirm: "Do you really want to delete this word-info?"} %></div>
+          <div><%= link_to image_tag('delete_button.png', class:"edit-button"), word_path(@word.id), method: :delete, data: {confirm: "Do you really want to delete this word-info?"} %></div>
         <% end %>
       </div>
       <% end %>
