--- a/app/assets/stylesheets/words/show.css
+++ b/app/assets/stylesheets/words/show.css
@@ -1,7 +1,6 @@
 .word-info {
   width: 70%;
   margin: 50px auto 100px;
-
 }
 
 /* word heading */
@@ -94,6 +93,37 @@ img.info-img-content {
   font-size: 15px;
 }
 
+/* transition buttons */
+.transition-buttons {
+  text-align: center;
+  margin-bottom: 150px;
+}
+
+.home-button {
+  height: 50px;
+  width: 50px;
+  border: 3px solid #003366;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+.my-page-button {
+  height: 50px;
+  width: 50px;
+  background-color: #003366;
+  border-radius: 5px;
+  padding: 7px;
+  margin-left: 10px;
+}
+
+.back-button {
+  height: 50px;
+  width: 50px;
+  border: 3px solid #003366;
+  border-radius: 5px;
+  padding: 5px;
+}
+
 /* responsive */
 /* @media (max-width: 1000px) {
   .info-header, .info-upper, .info-lower {
@@ -172,6 +202,10 @@ img.info-img-content {
     height: 200px;
     border-radius: 5px;
     object-fit: contain;
- 
+  }
+
+  .transition-buttons img {
+    height: 40px;
+    width: 40px;
   }
 }
