--- a/app/views/words/new.html.erb
+++ b/app/views/words/new.html.erb
@@ -51,7 +51,7 @@
     </div>
     <div class="post">
       <%= f.submit "Post", class:"post-button" %>
-      <%= link_to "Cancel", words_path, class:"cancel-button" %>
+      <%= link_to "Cancel", :back, class:"cancel-button" %>
     </div>
   <% end %>
 </div>
