--- a/app/assets/stylesheets/words/new.css
+++ b/app/assets/stylesheets/words/new.css
@@ -8,9 +8,8 @@
 }
 
 .post-header-text {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bold;
-  color: #003366;
   border-bottom: 5px solid #003366;
   margin: 0 auto;
 }
@@ -69,36 +68,40 @@
 
 /* 投稿ボタン */
 .post {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 100px;
+  margin-bottom: 150px;
 }
 
-.post-button{
-  height: 30px;
-  width: 70px;
-  color: white;
+.post-button {
+  width:  300px;
+  color: greenyellow;
   font-weight: bold;
+  text-align: center;
   background-color: #003366;
+  border-top: 2px solid gray;
+  border-left: 2px solid gray;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
   border-radius: 5px;
-  margin-right: 10px;
+  padding: 10px;
+  display: block;
+  margin: 0 auto;
 }
 
 .cancel-button {
-  height: 30px;
-  width: 68px;
-  font-size: 13px;
-  font-weight: bold;
+  width:  200px;
   color: #003366;
-  background-color: white;
-  border-radius: 5px;
-  border-top: 2px solid gray; border-left: 2px solid gray;
-  border-bottom: 2px solid black; border-right: 2px solid black;
+  font-weight: bold;
   text-decoration: none;
   text-align: center;
-  line-height: 27px;
-  margin-left: 10px;
+  background-color: white;
+  border-top: 2px solid gray;
+  border-left: 2px solid gray;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  border-radius: 5px;
+  padding: 8px;
+  display: block;
+  margin: 30px auto 0;
 }
 
 /* responsive */
