レスポンシブ対応

--- a/app/assets/stylesheets/words/edit.css
+++ b/app/assets/stylesheets/words/edit.css
@@ -45,6 +45,7 @@
 .kana-text, .kanji-text, .english-text, .pos-select {
   height: 30px; 
   width: 100%;
+  padding-left: 5px;
   border: 2px solid black;
   border-radius: 5px;
 }
@@ -59,6 +60,7 @@
 .explanation-text {
   height: 300px;
   width: 100%;
+  padding: 5px;
   border: 2px solid black;
   border-radius: 5px;
 }
@@ -112,6 +114,13 @@
     margin-top: 30px;
   }
 
+  .edit-header-text {
+    font-size: 20px;
+    font-weight: bold;
+    border-bottom: 5px solid #003366;
+    margin: 0 auto;
+  }
+
   .word-kana-wrap, .word-kanji-wrap, .word-english-wrap, .word-class-wrap, .image {
     margin-bottom: 20px;
     width: 100%;
@@ -130,13 +139,7 @@
     font-size: 15px;
   } 
 
-  .kana-text, .kanji-text, .english-text, .pos-select {
+  .kana-text, .kanji-text, .english-text, .pos-select, .explanation-text {
     font-size: 13px;
-    padding-left: 5px;
   }  
-
-  .explanation-text {
-    font-size: 13px;
-    padding: 5px;
-  }
 }
