--- a/app/assets/stylesheets/words/header.css
+++ b/app/assets/stylesheets/words/header.css
@@ -8,11 +8,28 @@
 }
 
 .header-left {
-  width: 50%;
+  width: 60%;
+}
+
+.header-left-contents {
+  display: flex;
+  align-items: center;
+  float: left;
+  margin-left: 15px;
+}
+
+.logo {
+  height: 60px;
+  width: 60px;
+  font-size: 30px;
+  font-weight: bold;
+  background-color: white;
+
+  padding: 5px;
 }
 
 .app-title {
-  font-size: 30px;
+  font-size: 35px;
   font-weight: bold;
   color: white;
   margin-left: 15px;
@@ -20,7 +37,7 @@
 }
 
 .header-right {
-  width: 50%;
+  width: 40%;
 }
 
 .header-right-lists {
@@ -180,12 +197,22 @@
 
   .header-left {
     width: 100%;
-    
+  }
+
+  .header-left-contents {
+    margin-left: 7px;
+  }
+
+  .logo {
+    height: 40px;
+    width: 40px;
+    background-color: white;
+    padding: 5px;
   }
 
   .app-title {
     font-size: 30px;
-    margin-left: 5px;
+    margin-left: 7px;
   }
 
   .header-right {
@@ -219,5 +246,4 @@
     margin-left: 0;
     vertical-align: bottom;
   }
-  
 }
