--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -24,6 +24,7 @@
             <ul class="sub-out">
               <li><%= link_to "Logout", destroy_user_session_path, method: :delete, class:"header-right-sub" %></li>
               <li><%= link_to "Edit", edit_user_path(current_user), class:"header-right-sub" %></li>
+              <li><%= link_to "Delete",  delete_confirmation_user_path(current_user), class:"header-right-sub" %></li>
             </ul>
           </li>
         </ul>
