--- a/app/assets/stylesheets/user/login.css
+++ b/app/assets/stylesheets/user/login.css
@@ -72,7 +72,7 @@
   border-radius: 5px;
 }
 
-/* responsive */
+/* smart phone */
 @media (max-width: 500px) {
 
   .form-wrap {
@@ -120,3 +120,4 @@
     border-radius: 5px;
   }
 }
+/* /smart phone */
