--- a/app/assets/stylesheets/shared/footer_1.css
+++ b/app/assets/stylesheets/shared/footer_1.css
@@ -11,6 +11,7 @@
   font-weight: bold;
 }
 
+/* smart phone */
 @media (max-width: 500px) {
   .footer-1 {
     height:25px;
@@ -20,3 +21,4 @@
     font-size: 10px;
   }
 }
+/* /smart phone */
