--- a/app/assets/stylesheets/shared/footer_2.css
+++ b/app/assets/stylesheets/shared/footer_2.css
@@ -12,6 +12,7 @@
   font-weight: bold;
 }
 
+/* smart phone */
 @media (max-width: 500px) {
   .footer-2 {
     height:25px;
@@ -21,3 +22,4 @@
     font-size: 10px;
   }
 }
+/* /smart phone */
