--- a/app/assets/stylesheets/words/header.css
+++ b/app/assets/stylesheets/words/header.css
@@ -132,46 +132,46 @@
 
 /* 検索条件 */
 .search-filtering {
-  position: relative; /* 選択ボックスの位置指定 */
-  display: block; /* ブロックレベル要素化にする */
-  width: 190px; /* ボックスの高さを指定する */
-  border: 2px solid #003366;/* ボックスの境界線を実線で指定する */
-  border-radius: 5px; /* ボックスに角丸を指定する */
+  position: relative;
+  display: block;
+  width: 190px;
+  border: 2px solid #003366;
+  border-radius: 5px;
 }
   
 .search-filtering:before {
-  position: absolute; /* 矢印の位置を指定する */
-  content: ""; /* 矢印のコンテンツ */
-  top: 50%; /* 下部から配置の基準位置を決める */
-  right: 10px; /* 右側から配置の基準位置を決める */
-  width:0px; /* ボックスの横幅をなしに指定する */
-  height:0px; /* ボックスの高さをなしに指定する */
-  margin: -2px 0 0 0; /* ボックス外側の余白を指定する */
-  border: 5px solid transparent; /* 矢印の境界線を透過する */
-  border-top: 5px solid #003366; /* 矢印ボックス上部の境界線を実線で指定する */
-  cursor: pointer; /* マウスカーソルの形を指定する */
-  pointer-events: none; /* マウスイベントを制御する */
+  position: absolute;
+  content: "";
+  top: 50%;
+  right: 10px;
+  width:0px;
+  height:0px;
+  margin: -2px 0 0 0;
+  border: 5px solid transparent;
+  border-top: 5px solid #003366;
+  cursor: pointer;
+  pointer-events: none;
 }
 
 .search-filtering select {
-  -webkit-appearance: none;/* ベンダープレフィックス(Google Chrome、Safari用) */
-  -moz-appearance: none; /* ベンダープレフィックス(Firefox用) */
-  appearance: none; /* 標準のスタイルを無効にする */
-  display: block; /* ブロックレベル要素化する */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  display: block;
   height: 31px;
-  width: 186px; /* ボックスの高さを指定する */
-  padding-left: 10px; /* ボックス内側の余白を指定する */
-  color: #003366; /* フォントの色を指定 */
-  border: none; /* 境界線をなしに指定する */
-  border-radius: 5px; /* 角丸を指定する */
-  background: transparent;/* 背景を透過指定する */
+  width: 186px;
+  padding-left: 10px;
+  color: #003366;
+  border: none;
+  border-radius: 5px;
+  background: transparent;
 }
 
-::-ms-expand { /* select要素のデザインを無効にする（IE用） */
+::-ms-expand {
   display: none;
 }
 
-/* 検索条件 */
+/* 検索語彙入力 */
 .search-word{
   height: 35px;
   width: 300px;
