--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -1,4 +1,4 @@
-.background {
+.registration-wrap {
   height: 100vh;
   background-color: #003366;
 }
@@ -57,7 +57,7 @@
 
 .sign-up {
   text-align: center;
-  margin: 60px 0 35px 0;
+  margin: 60px 0 60px 0;
 }
 
 .sign-up-button {
@@ -68,6 +68,18 @@
   font-weight: bold;
   background-color: white;
   border-radius: 5px;
+}
+
+.sign-up-bottom {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.sign-up-bottom-logo {
+  height: 50px;
+  width: 50px;
+  background-color: white;
+  padding: 5px;
 }
 
 /* smart phone */
@@ -116,6 +128,12 @@
     width: 60px;
     font-size: 10px;
     border-radius: 5px;
+  }
+
+  .sign-up-bottom-logo {
+    height: 40px;
+    width: 40px;
+    padding: 5px;
   }
 }
 /* /smart phone */
