--- a/app/assets/stylesheets/words/index.css
+++ b/app/assets/stylesheets/words/index.css
@@ -8,10 +8,8 @@
   color: rgb(31, 30, 30);
   font-size: 15px;
   font-weight: bold;
+  list-style: none;
   text-decoration: none;
-  /* background: -webkit-linear-gradient(0deg, blue, #15b610, rgb(247, 183, 5));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
 }
 /* /tag cloud */
 
