--- a/app/assets/stylesheets/words/new.css
+++ b/app/assets/stylesheets/words/new.css
@@ -1,20 +1,20 @@
-/* フォーム全体 */
-.post-wrap {
-}
-
+/* form general */
 .word-registration {
   width: 50%;
   margin: 50px auto;
 }
+/* /form general */
 
+/* form header */
 .post-header-text {
   font-size: 25px;
   font-weight: bold;
   border-bottom: 5px solid #003366;
   margin: 0 auto;
 }
+/* /form header */
 
-/* フォーム内部 */
+/* form contents */
 .post-contents {
   margin-top: 50px;
 }
@@ -67,9 +67,10 @@
   border: 2px solid black;
   border-radius: 5px;
 }
+/* form contents */
 
-/* 投稿ボタン */
-.post {
+/* buttons */
+.post-button-wrap {
   margin-bottom: 150px;
 }
 
@@ -105,6 +106,7 @@
   display: block;
   margin: 30px auto 0;
 }
+/* /buttons */
 
 /* ipad */
 @media (max-width: 1100px) {
