--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,41 +1,44 @@
-<div class="background">
-<%= form_with model: @user, url: user_registration_path, class: "sign-up-form", local: true do |f| %>
-  <div class="form-wrap">
-    <div class="form-header">
-      <h1 class="form-header-text">
-        Sign Up
-      </h1>
-    </div>
+<div class="registration-wrap">
+  <%= form_with model: @user, url: user_registration_path, class: "sign-up-form", local: true do |f| %>
+    <div class="form-wrap">
+      <div class="form-header">
+        <h1 class="form-header-text">
+          Sign Up
+        </h1>
+      </div>
 
-    <%= render 'shared/error_messages', model: f.object %>
+      <%= render 'shared/error_messages', model: f.object %>
 
-    <div class="form-group">
-      <div class="form-text-wrap">
-        <label class="form-text">Nickname</label>
+      <div class="form-group">
+        <div class="form-text-wrap">
+          <label class="form-text">Nickname</label>
+        </div>
+        <%= f.text_field :nickname, placeholder: "e.g. Johnny", class: "form-content", maxlength: "30" %>
       </div>
-      <%= f.text_field :nickname, placeholder: "e.g. Johnny", class: "form-content", maxlength: "30" %>
-    </div>
-    <div class="form-group">
-      <div class="form-text-wrap">
-        <label class="form-text">Email</label>
+      <div class="form-group">
+        <div class="form-text-wrap">
+          <label class="form-text">Email</label>
+        </div>
+        <%= f.email_field :email, placeholder: "e.g. xxxxx@xxx.xxx", class: "form-content" %>
       </div>
-      <%= f.email_field :email, placeholder: "e.g. xxxxx@xxx.xxx", class: "form-content" %>
-    </div>
-    <div class="form-group">
-      <div class="form-text-wrap">
-        <label class="form-text">Password</label>
+      <div class="form-group">
+        <div class="form-text-wrap">
+          <label class="form-text">Password</label>
+        </div>
+        <%= f.password_field :password, placeholder: "8 characters or longer. At least 1 number.", class: "form-content" %>
       </div>
-      <%= f.password_field :password, placeholder: "8 characters or longer. At least 1 number.", class: "form-content" %>
-    </div>
-    <div class="form-group">
-      <div class="form-text-wrap">
-        <label class="form-text">Confirm password</label>
+      <div class="form-group">
+        <div class="form-text-wrap">
+          <label class="form-text">Confirm password</label>
+        </div>
+        <%= f.password_field :password_confirmation, placeholder: "Same pasword.", class: "form-content" %>
       </div>
-      <%= f.password_field :password_confirmation, placeholder: "Same pasword.", class: "form-content" %>
+      <div class="sign-up">
+        <%= f.submit "Sign Up", class: "sign-up-button" %>
+      </div>
+      <div class="sign-up-bottom">
+        <%= link_to image_tag('dj_logo.png', class:"sign-up-bottom-logo"), "/words" %>
+      </div>
     </div>
-    <div class="sign-up">
-      <%= f.submit "Sign Up", class: "sign-up-button" %>
-    </div>
-  </div>
-<% end %>
+  <% end %>
 </div>
