ユーザーログインの結合テスト

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,25 +11,25 @@
 
       <div class="form-group">
         <div class="form-text-wrap">
-          <label class="form-text">Nickname</label>
+          <%= f.label :nickname, "Nickname", class: "form-text" %>
         </div>
         <%= f.text_field :nickname, placeholder: "e.g. Johnny", class: "form-content", maxlength: "30" %>
       </div>
       <div class="form-group">
         <div class="form-text-wrap">
-          <label class="form-text">Email</label>
+          <%= f.label :email, "Email", class: "form-text" %>
         </div>
         <%= f.email_field :email, placeholder: "e.g. xxxxx@xxx.xxx", class: "form-content" %>
       </div>
       <div class="form-group">
         <div class="form-text-wrap">
-          <label class="form-text">Password</label>
+          <%= f.label :password, "Password", class: "form-text" %>
         </div>
         <%= f.password_field :password, placeholder: "8 characters or longer. At least 1 number.", class: "form-content" %>
       </div>
       <div class="form-group">
         <div class="form-text-wrap">
-          <label class="form-text">Confirm password</label>
+          <%= f.label :password_confirmation, "Confirm password", class: "form-text" %>
         </div>
         <%= f.password_field :password_confirmation, placeholder: "Same pasword.", class: "form-content" %>
       </div>
